<resources>
    <string name="app_name">CW2_Apps</string>
    <string name="app_title">COMP2000 Restaurant</string>
    <string name="menu">Menu</string>
    <string name="title">Enjoy Our Delicious Food</string>
    <string name="my_booking">My Booking</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="notice">Notifications</string>
    <string name="back">Back</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="booking_manage">Booking Management</string>

    <string name="menuManage">Menu Management</string>
    <string name="booking_record">All Booking Record</string>
    <string name="guest">Guest</string>
    <string name="staff">Staff</string>
    <string name="role">Role</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="account">Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="confirmed">Confirmed</string>
    <string name="confirm">Confirm</string>
    <string name="role_auto_detected">Role will be determined automatically after login</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="email">Email</string>
    <string name="please_enter_your_last_name">Please enter your last name</string>
    <string name="last_name">Last Name</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_your_account_name">Please enter your account name</string>
    <string name="contact">Contact No.</string>
    <string name="required">Please Enter Account Name and Password\n</string>
    <string name="password_not_match">Confirm Password do not match.</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_contact">Please enter a valid contact number</string>
    <string name="register_ok">Register Account Successful!</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="people">How many People</string>
    <string name="store_location">Location</string>
    <string name="invalid_people">Please select a valid group size</string>
    <string name="invalid_time">Please choose a time in the future</string>
    <string name="no_reservations">No Any Reservations Now</string>
    <string name="reservation_updated">Reservation updated</string>
    <string name="resv_meta">Party: %1$d • Location: %2$s • Status: %3$s</string>
    <string name="reservation_cancelled">Reservation cancelled</string>
    <string name="reminder_title">Reservation Reminder</string>
    <string name="reminder_text">Your reservation at %1$s starts soon.</string>
    <string name="reservation_created">Reservation created</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
</resources>

