<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".guest.GuestHomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.CW2Apps.Toolbar.Purple">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_title"
            app:titleCentered="true"
            app:menu="@menu/menu_guest_home" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:text="Welcome!"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvBannerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_card_light"
        android:contentDescription="@string/title"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnReservation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/make_reservation"
        android:textColor="@color/white"
        android:background="@drawable/btn_outline"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:background="@drawable/btn_outline"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnBooking"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/my_booking"
        android:textColor="@color/white"
        android:background="@drawable/btn_outline"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/btnSetting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:background="@drawable/btn_outline"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false" />

</LinearLayout>